[gd_scene load_steps=19 format=3 uid="uid://byfgf57u8ik6s"]

[ext_resource type="Script" uid="uid://c8yn1jfnqmv73" path="res://Horn/horn.gd" id="1_n4tcf"]
[ext_resource type="PackedScene" uid="uid://c5br4ujgr8x1h" path="res://Horn/stratosonic_horn_-_music.glb" id="2_8cr8o"]
[ext_resource type="Script" uid="uid://by4lscssq8hyr" path="res://Horn/Audio/horn_player.gd" id="3_aymlk"]
[ext_resource type="AudioStream" uid="uid://dsfidws43xkrb" path="res://Horn/mega-horn-398654.mp3" id="4_sri5c"]
[ext_resource type="Texture2D" uid="uid://bmj0a8io00r6t" path="res://Assets/misc/Untitled_design_16.png" id="5_sri5c"]
[ext_resource type="FontFile" uid="uid://cvtwr3lmhys1v" path="res://Assets/fonts/atwriter.ttf" id="6_jqtd1"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_q45hi"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_ybffx"]
sky_material = SubResource("ProceduralSkyMaterial_q45hi")

[sub_resource type="Environment" id="Environment_p423y"]
background_mode = 2
sky = SubResource("Sky_ybffx")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8p111"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.9254902, 1, 0.015686275, 0.25490198)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.77151656, 0.6582191, 1.92523e-06, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 5
shadow_size = 40

[sub_resource type="FontFile" id="FontFile_aymlk"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_ybffx"]
font = SubResource("FontFile_aymlk")
font_size = 30
font_color = Color(0.87058824, 0.827451, 0.49019608, 1)
outline_size = 5
outline_color = Color(0.78431374, 0.70980394, 0.15294118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sri5c"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.8627451, 0.101960786, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jqtd1"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.8627451, 0.101960786, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sb3pp"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.8627451, 0.101960786, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1db5x"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.8627451, 0.101960786, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8c28k"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.8627451, 0.101960786, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 6

[sub_resource type="LabelSettings" id="LabelSettings_sb3pp"]
font = ExtResource("6_jqtd1")

[node name="Horn" type="Node3D"]
script = ExtResource("1_n4tcf")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("2_8cr8o")]

[node name="HornPlayer" type="Node3D" parent="."]
script = ExtResource("3_aymlk")
timeout_horn = 15.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="HornPlayer"]
environment = SubResource("Environment_p423y")

[node name="Player" type="AudioStreamPlayer3D" parent="HornPlayer"]
unique_name_in_owner = true
stream = ExtResource("4_sri5c")
volume_db = 15.0
bus = &"HornBus"

[node name="Control" type="Control" parent="HornPlayer"]
clip_contents = true
layout_direction = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="HornPlayer/Control"]
z_index = -3
layout_mode = 0
offset_left = 12.0
offset_top = 419.0
offset_right = 780.0
offset_bottom = 700.0
scale = Vector2(0.795, 0.795)
theme_override_styles/panel = SubResource("StyleBoxFlat_8p111")

[node name="Box" type="VBoxContainer" parent="HornPlayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 430.0
offset_right = -396.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.795, 0.795)

[node name="HBoxContainer3" type="HBoxContainer" parent="HornPlayer/Control/Box"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HornPlayer/Control/Box/HBoxContainer3"]
layout_mode = 2

[node name="Label6" type="Label" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Pitch "
label_settings = SubResource("LabelSettings_ybffx")

[node name="Label2" type="Label" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Distortion"
label_settings = SubResource("LabelSettings_ybffx")

[node name="Label3" type="Label" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Delay"
label_settings = SubResource("LabelSettings_ybffx")

[node name="Label4" type="Label" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Phaser"
label_settings = SubResource("LabelSettings_ybffx")

[node name="Label5" type="Label" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Compressor"
label_settings = SubResource("LabelSettings_ybffx")

[node name="VBoxContainer2" type="VBoxContainer" parent="HornPlayer/Control/Box/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer2"]
layout_mode = 2
text = "0           1            2            3          4          5          6           7           8          9        10"

[node name="PitchSlider" type="HSlider" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_sri5c")
max_value = 1.0
step = 0.1
value = 1.0

[node name="DistortionSlider" type="HSlider" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_jqtd1")
max_value = 1.0
step = 0.1
value = 1.0

[node name="DelaySlider" type="HSlider" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_sb3pp")
max_value = 1.0
step = 0.1
value = 0.3

[node name="PhaserSlider" type="HSlider" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_1db5x")
max_value = 1.0
step = 0.1
value = 0.2

[node name="CompressorSlider" type="HSlider" parent="HornPlayer/Control/Box/HBoxContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_8c28k")
max_value = 1.0
step = 0.1
value = 0.3

[node name="NinePatchRect" type="NinePatchRect" parent="HornPlayer/Control"]
layout_mode = 0
offset_left = 787.0
offset_top = 134.0
offset_right = 1136.0
offset_bottom = 489.0
texture = ExtResource("5_sri5c")
region_rect = Rect2(0, -22.37619, 1000, 1022.3762)

[node name="VBoxContainer" type="VBoxContainer" parent="HornPlayer/Control/NinePatchRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 39.0
grow_horizontal = 2

[node name="Label" type="Label" parent="HornPlayer/Control/NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "NOTES"

[node name="VBoxContainer2" type="VBoxContainer" parent="HornPlayer/Control/NinePatchRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="HornPlayer/Control/NinePatchRect/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "???"

[node name="Button2" type="Button" parent="HornPlayer/Control/NinePatchRect/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "???"

[node name="Button3" type="Button" parent="HornPlayer/Control/NinePatchRect/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "???"

[node name="Camera3D" type="Camera3D" parent="HornPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.87320983)

[node name="Sprite3D" type="Sprite3D" parent="HornPlayer"]

[node name="Control2" type="Control" parent="HornPlayer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HornCooldownBar" type="ProgressBar" parent="HornPlayer/Control2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 576.0
offset_right = 288.0
offset_bottom = 50.0
grow_horizontal = 2
scale = Vector2(0.5, 1)
show_percentage = false

[node name="Label" type="Label" parent="HornPlayer/Control2/HornCooldownBar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 10.0
offset_right = -770.0
offset_bottom = 31.0
grow_horizontal = 2
scale = Vector2(2, 1)
text = "HORN TIMEOUT"
label_settings = SubResource("LabelSettings_sb3pp")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
